--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,12 @@
 .container{
   display: flex;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .sidebar{
   background-color: #111827;
+  height: 100vh;
   width: 280px;
   padding: 24px;
   display: flex;
@@ -19,15 +21,14 @@
 }
 
 .sidebar.hide {
-  width: 80px;
+  width: 75px;
   transition: all ease-in .3s;
 }
 
 .main-content{
   height: 100vh;
   width: 100vw;
-  /* background-color: aqua;
-  z-index: -99999; */
+  /* background-color: aqua; */
 }
 
 .shape::before{
@@ -60,8 +61,8 @@
 }
 
 .sidebar .description-header{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.1rem;
+  font-family: 'DynaPuff', sans-serif;
+  font-size: 1.5rem;
   font-weight: 600;
   color: #fff;
   text-align: center;
@@ -93,16 +94,10 @@ span1{
   transition: .3s ease;
 }
 
-.icon.svg{
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-}
-
 .list-link a:hover{
   background-color: #FFD700;
   color: #111827;
-  padding: 10px 10px;
+  padding: 5px 5px;
   border-radius: 5px;
 }
 
@@ -149,7 +144,7 @@ span1{
   overflow: hidden;
 }
 .sidebar.hide + .main-content #button-menu{
-  left: 80px;
+  left: 75px;
   margin-left: 25px;
 }
 
